--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -168,6 +168,8 @@
                     <li><a href="../files/src-response-model-catalognode.html"><abbr title="src/Response/Model/CatalogNode.php">CatalogNode.php</abbr></a></li>
                     <li><a href="../files/src-response-model-chaininginfo.html"><abbr title="src/Response/Model/ChainingInfo.php">ChainingInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-model-chainingsuggestion.html"><abbr title="src/Response/Model/ChainingSuggestion.php">ChainingSuggestion.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-chaininguser.html"><abbr title="src/Response/Model/ChainingUser.php">ChainingUser.php</abbr></a></li>
+                    <li><a href="../files/src-response-chainingusersresponse.html"><abbr title="src/Response/ChainingUsersResponse.php">ChainingUsersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-challenge.html"><abbr title="src/Response/Model/Challenge.php">Challenge.php</abbr></a></li>
                     <li><a href="../files/src-response-model-challengeentrydata.html"><abbr title="src/Response/Model/ChallengeEntryData.php">ChallengeEntryData.php</abbr></a></li>
                     <li><a href="../files/src-response-model-challengefields.html"><abbr title="src/Response/Model/ChallengeFields.php">ChallengeFields.php</abbr></a></li>
@@ -194,9 +196,9 @@
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
+                    <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
-                    <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-comment.html"><abbr title="src/Response/Model/Comment.php">Comment.php</abbr></a></li>
@@ -232,8 +234,8 @@
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createserieresponse.html"><abbr title="src/Response/CreateSerieResponse.php">CreateSerieResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -389,8 +391,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -440,8 +442,8 @@
                     <li><a href="../files/src-realtime-subscription-skywalker-livesubscription.html"><abbr title="src/Realtime/Subscription/Skywalker/LiveSubscription.php">LiveSubscription.php</abbr></a></li>
                     <li><a href="../files/src-response-model-livevideoshare.html"><abbr title="src/Response/Model/LiveVideoShare.php">LiveVideoShare.php</abbr></a></li>
                     <li><a href="../files/src-response-model-liveviewerinvite.html"><abbr title="src/Response/Model/LiveViewerInvite.php">LiveViewerInvite.php</abbr></a></li>
-                    <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
+                    <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-locationfeedresponse.html"><abbr title="src/Response/LocationFeedResponse.php">LocationFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-locationinforesponse.html"><abbr title="src/Response/LocationInfoResponse.php">LocationInfoResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-locationitem.html"><abbr title="src/Response/Model/LocationItem.php">LocationItem.php</abbr></a></li>
@@ -461,8 +463,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-command-direct-markseen.html"><abbr title="src/Realtime/Command/Direct/MarkSeen.php">MarkSeen.php</abbr></a></li>
                     <li><a href="../files/src-response-model-megraphdata.html"><abbr title="src/Response/Model/MeGraphData.php">MeGraphData.php</abbr></a></li>
-                    <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-model-media.html"><abbr title="src/Response/Model/Media.php">Media.php</abbr></a></li>
+                    <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentrepliesresponse.html"><abbr title="src/Response/MediaCommentRepliesResponse.php">MediaCommentRepliesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentsresponse.html"><abbr title="src/Response/MediaCommentsResponse.php">MediaCommentsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-mediacroppinginfo.html"><abbr title="src/Response/Model/MediaCroppingInfo.php">MediaCroppingInfo.php</abbr></a></li>
@@ -553,8 +555,8 @@
                     <li><a href="../files/src-response-model-producttags.html"><abbr title="src/Response/Model/ProductTags.php">ProductTags.php</abbr></a></li>
                     <li><a href="../files/src-response-profilenoticeresponse.html"><abbr title="src/Response/ProfileNoticeResponse.php">ProfileNoticeResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-promotionsunit.html"><abbr title="src/Response/Model/PromotionsUnit.php">PromotionsUnit.php</abbr></a></li>
-                    <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
+                    <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-response-pushpreferencesresponse.html"><abbr title="src/Response/PushPreferencesResponse.php">PushPreferencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-pushregisterresponse.html"><abbr title="src/Response/PushRegisterResponse.php">PushRegisterResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-pushsettings.html"><abbr title="src/Response/Model/PushSettings.php">PushSettings.php</abbr></a></li>
@@ -658,8 +660,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -795,8 +797,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
