--- a/documentation/namespaces/instagramapi-response-model.html
+++ b/documentation/namespaces/instagramapi-response-model.html
@@ -602,6 +602,8 @@
                 <dd>SessionInfo.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-Clip.html"><abbr title="\InstagramAPI\Response\Model\Clip">Clip</abbr></a></dt>
                 <dd>Clip.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-ChainingUser.html"><abbr title="\InstagramAPI\Response\Model\ChainingUser">ChainingUser</abbr></a></dt>
+                <dd>ChainingUser.</dd>
             
                     </dl>
     
