--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -539,6 +539,8 @@
                 <dd>GetPostLiveThumbnailsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-CreateSerieResponse.html"><abbr title="\InstagramAPI\Response\CreateSerieResponse">CreateSerieResponse</abbr></a></dt>
                 <dd>CreateSerieResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-ChainingUsersResponse.html"><abbr title="\InstagramAPI\Response\ChainingUsersResponse">ChainingUsersResponse</abbr></a></dt>
+                <dd>ChainingUsersResponse.</dd>
             
                     </dl>
     
