--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1480,6 +1480,10 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-VerifyEmailCodeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\VerifyEmailCodeFormException">VerifyEmailCodeFormException</abbr></a></dt>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-ChainingUsersResponse.html"><abbr title="\InstagramAPI\Response\ChainingUsersResponse">ChainingUsersResponse</abbr></a></dt>
+                <dd>ChainingUsersResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-ChainingUser.html"><abbr title="\InstagramAPI\Response\Model\ChainingUser">ChainingUser</abbr></a></dt>
+                <dd>ChainingUser.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
