--- a/documentation/classes/InstagramAPI-Request-Reel.html
+++ b/documentation/classes/InstagramAPI-Request-Reel.html
@@ -99,7 +99,7 @@
                 </tr>
                                         <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Request-Reel.html#method_uploadVideo">uploadVideo()</a></th>
-                    <td class="phpdocumentor-cell">Uploads a video to Reels (clips).</td>
+                    <td class="phpdocumentor-cell">Uploads a video to Reels (clips). EXPERIMENTAL.</td>
                     <td class="phpdocumentor-cell"><a href="../classes/InstagramAPI-Response-ConfigureResponse.html"><abbr title="\InstagramAPI\Response\ConfigureResponse">ConfigureResponse</abbr></a></td>
                 </tr>
                             <tr>
@@ -174,7 +174,7 @@
         :
         <span class="phpdocumentor-element-found-in__line">26</span>
     </aside>
-        <p class="phpdocumentor-summary">Uploads a video to Reels (clips).</p>
+        <p class="phpdocumentor-summary">Uploads a video to Reels (clips). EXPERIMENTAL.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
                                 <span class="phpdocumentor-signature__name">uploadVideo</span>(
