--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -116,8 +116,8 @@
                     <li><a href="../files/src-response-model-assetmodel.html"><abbr title="src/Response/Model/AssetModel.php">AssetModel.php</abbr></a></li>
                     <li><a href="../files/src-response-model-attribution.html"><abbr title="src/Response/Model/Attribution.php">Attribution.php</abbr></a></li>
                     <li><a href="../files/src-response-model-audiocontext.html"><abbr title="src/Response/Model/AudioContext.php">AudioContext.php</abbr></a></li>
-                    <li><a href="../files/src-push-fbns-auth.html"><abbr title="src/Push/Fbns/Auth.php">Auth.php</abbr></a></li>
                     <li><a href="../files/src-realtime-mqtt-auth.html"><abbr title="src/Realtime/Mqtt/Auth.php">Auth.php</abbr></a></li>
+                    <li><a href="../files/src-push-fbns-auth.html"><abbr title="src/Push/Fbns/Auth.php">Auth.php</abbr></a></li>
                     <li><a href="../files/src-response-model-authorizationheader.html"><abbr title="src/Response/Model/AuthorizationHeader.php">AuthorizationHeader.php</abbr></a></li>
                     <li><a href="../files/src-autopropertymapper.html"><abbr title="src/AutoPropertyMapper.php">AutoPropertyMapper.php</abbr></a></li>
                     <li><a href="../files/src-response-model-aymf.html"><abbr title="src/Response/Model/Aymf.php">Aymf.php</abbr></a></li>
@@ -159,6 +159,8 @@
                 </ul>
                                     <h3>C</h3>
         <ul class="phpdocumentor-list">
+                    <li><a href="../files/src-response-model-cameramodels.html"><abbr title="src/Response/Model/CameraModels.php">CameraModels.php</abbr></a></li>
+                    <li><a href="../files/src-response-cameramodelsresponse.html"><abbr title="src/Response/CameraModelsResponse.php">CameraModelsResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-mqtt-capabilities.html"><abbr title="src/Realtime/Mqtt/Capabilities.php">Capabilities.php</abbr></a></li>
                     <li><a href="../files/src-response-capabilitiesdecisionsresponse.html"><abbr title="src/Response/CapabilitiesDecisionsResponse.php">CapabilitiesDecisionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-caption.html"><abbr title="src/Response/Model/Caption.php">Caption.php</abbr></a></li>
@@ -391,8 +393,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -409,8 +411,8 @@
                     <li><a href="../files/src-media-photo-instagramphoto.html"><abbr title="src/Media/Photo/InstagramPhoto.php">InstagramPhoto.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramthumbnail.html"><abbr title="src/Media/Video/InstagramThumbnail.php">InstagramThumbnail.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramvideo.html"><abbr title="src/Media/Video/InstagramVideo.php">InstagramVideo.php</abbr></a></li>
-                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
+                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-exception-internalexception.html"><abbr title="src/Exception/InternalException.php">InternalException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidsmscodeexception.html"><abbr title="src/Exception/InvalidSmsCodeException.php">InvalidSmsCodeException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invaliduserexception.html"><abbr title="src/Exception/InvalidUserException.php">InvalidUserException.php</abbr></a></li>
@@ -452,8 +454,8 @@
                     <li><a href="../files/src-response-model-loggedinaccount.html"><abbr title="src/Response/Model/LoggedInAccount.php">LoggedInAccount.php</abbr></a></li>
                     <li><a href="../files/src-response-loginactivityresponse.html"><abbr title="src/Response/LoginActivityResponse.php">LoginActivityResponse.php</abbr></a></li>
                     <li><a href="../files/src-exception-loginrequiredexception.html"><abbr title="src/Exception/LoginRequiredException.php">LoginRequiredException.php</abbr></a></li>
-                    <li><a href="../files/src-response-loginresponse.html"><abbr title="src/Response/LoginResponse.php">LoginResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-loginresponse.html"><abbr title="src/Response/Model/LoginResponse.php">LoginResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-loginresponse.html"><abbr title="src/Response/LoginResponse.php">LoginResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-logoutresponse.html"><abbr title="src/Response/LogoutResponse.php">LogoutResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-lookupphoneresponse.html"><abbr title="src/Response/LookupPhoneResponse.php">LookupPhoneResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-loomfetchconfigresponse.html"><abbr title="src/Response/LoomFetchConfigResponse.php">LoomFetchConfigResponse.php</abbr></a></li>
@@ -555,8 +557,8 @@
                     <li><a href="../files/src-response-model-producttags.html"><abbr title="src/Response/Model/ProductTags.php">ProductTags.php</abbr></a></li>
                     <li><a href="../files/src-response-profilenoticeresponse.html"><abbr title="src/Response/ProfileNoticeResponse.php">ProfileNoticeResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-promotionsunit.html"><abbr title="src/Response/Model/PromotionsUnit.php">PromotionsUnit.php</abbr></a></li>
-                    <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
+                    <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-response-pushpreferencesresponse.html"><abbr title="src/Response/PushPreferencesResponse.php">PushPreferencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-pushregisterresponse.html"><abbr title="src/Response/PushRegisterResponse.php">PushRegisterResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-pushsettings.html"><abbr title="src/Response/Model/PushSettings.php">PushSettings.php</abbr></a></li>
@@ -591,8 +593,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -628,6 +630,8 @@
                     <li><a href="../files/src-response-searchuserresponse.html"><abbr title="src/Response/SearchUserResponse.php">SearchUserResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-section.html"><abbr title="src/Response/Model/Section.php">Section.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sectionmedia.html"><abbr title="src/Response/Model/SectionMedia.php">SectionMedia.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-segmentationmodels.html"><abbr title="src/Response/Model/SegmentationModels.php">SegmentationModels.php</abbr></a></li>
+                    <li><a href="../files/src-response-segmentationmodelsresponse.html"><abbr title="src/Response/SegmentationModelsResponse.php">SegmentationModelsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-segmentedstartresponse.html"><abbr title="src/Response/SegmentedStartResponse.php">SegmentedStartResponse.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-selectcontactpointrecoveryformexception.html"><abbr title="src/Exception/Checkpoint/SelectContactPointRecoveryFormException.php">SelectContactPointRecoveryFormException.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-selectverificationmethodformexception.html"><abbr title="src/Exception/Checkpoint/SelectVerificationMethodFormException.php">SelectVerificationMethodFormException.php</abbr></a></li>
@@ -660,8 +664,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
