--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -541,6 +541,10 @@
                 <dd>CreateSerieResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-ChainingUsersResponse.html"><abbr title="\InstagramAPI\Response\ChainingUsersResponse">ChainingUsersResponse</abbr></a></dt>
                 <dd>ChainingUsersResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-CameraModelsResponse.html"><abbr title="\InstagramAPI\Response\CameraModelsResponse">CameraModelsResponse</abbr></a></dt>
+                <dd>CameraModelsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-SegmentationModelsResponse.html"><abbr title="\InstagramAPI\Response\SegmentationModelsResponse">SegmentationModelsResponse</abbr></a></dt>
+                <dd>SegmentationModelsResponse.</dd>
             
                     </dl>
     
