--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1484,6 +1484,14 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>ChainingUsersResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-ChainingUser.html"><abbr title="\InstagramAPI\Response\Model\ChainingUser">ChainingUser</abbr></a></dt>
                 <dd>ChainingUser.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-CameraModelsResponse.html"><abbr title="\InstagramAPI\Response\CameraModelsResponse">CameraModelsResponse</abbr></a></dt>
+                <dd>CameraModelsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-CameraModels.html"><abbr title="\InstagramAPI\Response\Model\CameraModels">CameraModels</abbr></a></dt>
+                <dd>Automatically maps JSON data onto PHP objects with virtual functions.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-SegmentationModels.html"><abbr title="\InstagramAPI\Response\Model\SegmentationModels">SegmentationModels</abbr></a></dt>
+                <dd>SegmentationModels.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-SegmentationModelsResponse.html"><abbr title="\InstagramAPI\Response\SegmentationModelsResponse">SegmentationModelsResponse</abbr></a></dt>
+                <dd>SegmentationModelsResponse.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
