--- a/documentation/namespaces/instagramapi-response-model.html
+++ b/documentation/namespaces/instagramapi-response-model.html
@@ -604,6 +604,10 @@
                 <dd>Clip.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-ChainingUser.html"><abbr title="\InstagramAPI\Response\Model\ChainingUser">ChainingUser</abbr></a></dt>
                 <dd>ChainingUser.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-CameraModels.html"><abbr title="\InstagramAPI\Response\Model\CameraModels">CameraModels</abbr></a></dt>
+                <dd>Automatically maps JSON data onto PHP objects with virtual functions.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-SegmentationModels.html"><abbr title="\InstagramAPI\Response\Model\SegmentationModels">SegmentationModels</abbr></a></dt>
+                <dd>SegmentationModels.</dd>
             
                     </dl>
     
